methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:27: error: not found: value Direction
  setDirection(Direction.NORTH)
               ^FlowerPot:33: error: not found: value Direction
  setDirection(Direction.EAST)
               ^FlowerPot:39: error: not found: value Direction
  setDirection(Direction.WEST)
               ^